<resources>
    <string name="app_name">Time Based Locker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="saved_videos_path">/data/data/com.hz_apps.timebasedlocker/files/videos/</string>
    <string name="saved_photos_path">/data/data/com.hz_apps.timebasedlocker/files/photos/</string>

    <string name="file_delete_alert_message">The following files will be deleted permanently.</string>
    <string name="delete">Delete</string>

    <string name="set_time">SET TIME</string>
    <string name="set_date">SET DATE</string>
    <string name="allow_to_extend_date_later">Allow to Extend Date Later</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_settings_title">Theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="application_shared_preference">application shared preference</string>
    <string name="saved_time_preference">SavedTime</string>
</resources>