<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_videos">

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.hz_apps.timebasedlocker.ui.videos.VideosFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.hz_apps.timebasedlocker.ui.photos.PhotosFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_photos" />

    <fragment
        android:id="@+id/navigation_others"
        android:name="com.hz_apps.timebasedlocker.ui.others.OthersFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_others" />
</navigation>